Action bar button alignment. Issue: #2972

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -1025,6 +1025,7 @@ a.fa:hover {
     .fa-stack {
       width: 3em;
       height: 3em;
+      line-height: inherit;
       .stack-bottom-left {
         font-size: 2em;
         margin-top: 0.4em;
